objects/Studio_Calender__c.object
<CustomObject>
    <fields>
        <fullName>End_Time_Only__c</fullName>
        <label>End Time Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office Hours</fullName>
                </value>
                <value>
                    <fullName>Study Request</fullName>
                </value>
                <value>
                    <fullName>Space Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>DATEVALUE( Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_time_Only__c</fullName>
        <label>Start time Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progerss</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudioLab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Studio Lab</label>
        <referenceTo>Studio_Lab__c</referenceTo>
        <relationshipName>Studio_Calenders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudyDateOnly__c</fullName>
        <formula>TEXT(DATEVALUE(Start_Time__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StudyDateOnly</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Lab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar Event Name</label>
        <referenceTo>Study_Lab__c</referenceTo>
        <relationshipName>Studio_Calenders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Participant</label>
        <referenceTo>Study_Participant__c</referenceTo>
        <relationshipName>Studio_Calenders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Sample_Text__c</fullName>
        <label>Test Sample Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>TimeZone</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Calendar Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Study Level</fullName>
                </value>
                <value>
                    <fullName>Participant Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Type__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Study_Participant__c</columns>
        <columns>StudioLab__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>